Fix flickering issue in menu session

--- a/src/components/menu/MenuSession.scss
+++ b/src/components/menu/MenuSession.scss
@@ -49,6 +49,12 @@
     background-color: #333;
     color: #fff;
   }
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    background-color: #222;
+  }
 }
 
 .token-table {
